# bambu-spaghetti-guard

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  bambu_spaghetti_guard_brief.md  config.yaml  constraints.txt  pyproject.toml  requirements.txt  secrets.local.txt.template  tasks.ps1
.github/workflows/: ci.yml
deploy/: orange_pi_rknn.md  windows_service.md
deploy/systemd/: README.md  spaghetti-guard.service
docs/: ARCHITECTURE.md  INSTALL.md  PROTOCOL.md  RETRAINING.md  RUNBOOK.md  SAFETY.md  index.html
models/: README.md
scripts/: live_verify.py
src/spaghetti_guard/: __init__.py  camera.py  cli.py  config.py  control.py  detector.py  guard.py  notifier.py  viewer.py
tests/: conftest.py  test_ask_mode.py  test_camera_parse.py  test_cli_reconnect.py  test_cli_run_path.py  test_cli_secrets.py  test_config.py  test_config_defaults.py  test_control_payload.py  test_coverage_fillers.py  test_coverage_fillers2.py  test_coverage_fillers3.py  test_detector_debounce.py  test_guard_state.py  test_integration_loop.py  test_notifier.py  test_notifier_transports.py  test_replay_metrics.py  test_snapshot_retention.py  test_tls_pinning.py  test_training_validate.py  test_verification_infra.py  test_viewer_logic.py  test_viewer_tk_queue.py
training/: datasets.md  merge_datasets.py  prepare_dataset.py  train.py  train_from_snapshots.py  validate.py
verification/: metrics.py  mock_printer.py  replay_harness.py
verification/fixtures/: README.md
