[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaghetti-guard"
version = "0.1.0"
description = "Self-hosted Bambu P1S spaghetti / print-failure guard"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "paho-mqtt>=2.1,<3",
    "pyyaml>=6.0,<7",
    "Pillow>=10,<12",
    "numpy>=1.26,<3",
    "httpx>=0.27,<1",
    "cryptography>=42,<46",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5,<7",
    # mock MQTT broker for the integration suite (not a runtime dependency)
    "amqtt>=0.11,<0.12",
]
dev = [
    "spaghetti-guard[test]",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Live inference deps. torch is intentionally NOT here — install it yourself
# with the CUDA index matching your GPU (see docs/INSTALL.md).
live = [
    "ultralytics>=8.2",
    "opencv-python>=4.9",
]

[project.scripts]
spaghetti-guard = "spaghetti_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src", "."]
filterwarnings = [
    # Scoped to known third-party offenders — a blanket ignore would hide
    # deprecations in our own dependencies' next majors (pydantic, paho).
    "ignore::DeprecationWarning:amqtt.*",
    "ignore::DeprecationWarning:passlib.*",
    "ignore:Loading plugins from EntryPoints is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Defaults (E4/E7/E9 + F) plus bugbear-style safety and upgrade hints.
extend-select = ["B", "UP", "SIM"]
ignore = [
    "SIM105",  # try/except/pass is deliberate in shutdown paths
    "SIM108",  # ternary is not always clearer
    "E731",    # lambdas are used deliberately for tiny providers
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
